force-app/main/default/objects/Job_Application__c/fields/DateOfSelection__c.field-meta.xml
<CustomField>
    <fullName>DateOfSelection__c</fullName>
    <label>DateOfSelection</label>
    <type>Date</type>
</CustomField>