force-app/main/default/objects/Job_Application__c/fields/DayBeforeJoin__c.field-meta.xml
<CustomField>
    <fullName>DayBeforeJoin__c</fullName>
    <description>To get the number of Days before joining</description>
    <formula>Joining_Date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DayBeforeJoin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>