force-app/main/default/objects/Job_Application__c/recordTypes/Chevron.recordType-meta.xml
<RecordType>
    <fullName>Chevron</fullName>
    <active>true</active>
    <label>Chevron</label>
</RecordType>