force-app/main/default/objects/Job_Application__c/recordTypes/Chevron2.recordType-meta.xml
<RecordType>
    <fullName>Chevron2</fullName>
    <active>true</active>
    <label>Chevron2</label>
</RecordType>