force-app/main/default/objects/Job_Application__c/recordTypes/New.recordType-meta.xml
<RecordType>
    <fullName>New</fullName>
    <active>true</active>
    <description>For the Default Purposes</description>
    <label>New</label>
</RecordType>