force-app/main/default/objects/Job_Application__c/recordTypes/No_show.recordType-meta.xml
<RecordType>
    <fullName>No_show</fullName>
    <active>true</active>
    <description>Record Type for No show</description>
    <label>No show</label>
</RecordType>