force-app/main/default/objects/Job_Application__c/recordTypes/Onboarded.recordType-meta.xml
<RecordType>
    <fullName>Onboarded</fullName>
    <active>true</active>
    <description>This is for Onboarded purposes</description>
    <label>Onboarded</label>
</RecordType>