force-app/main/default/objects/Job_Application__c/recordTypes/Rejected.recordType-meta.xml
<RecordType>
    <fullName>Rejected</fullName>
    <active>true</active>
    <description>Record Type for Rejected</description>
    <label>Rejected</label>
</RecordType>