force-app/main/default/objects/Job_Application__c/recordTypes/Selected.recordType-meta.xml
<RecordType>
    <fullName>Selected</fullName>
    <active>true</active>
    <description>This Record Type is for Selected Purpose</description>
    <label>Selected</label>
</RecordType>