force-app/main/default/objects/Job_Application__c/validationRules/ValidateDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateDate</fullName>
    <active>true</active>
    <description>To check whether Date entered is valid</description>
    <errorConditionFormula>Joining_Date__c  &lt;=  TODAY()</errorConditionFormula>
    <errorMessage>Please Check the Joining Date should be valid</errorMessage>
</ValidationRule>